fixed text overflow css

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -111,7 +111,7 @@ b, strong {
   display: inline-block;
   vertical-align: top;
   margin-top: 5px;
-  min-width: 260px;
+  min-width: 385px;
   position: relative;
 }
 
@@ -518,7 +518,7 @@ b, strong {
 }
 @media (max-width: 580px) {
 	.animated-info {
-		min-width: 200px;
+		min-width: 300px;
 	}
   .animated-item {
     font-size: 30px;
